# voice-recognition-app

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt  voice_recorder.py
backend/: app.py  requirements.txt
frontend/: package.json
frontend/src/components/: VoiceRecorderUI.jsx
