[tool.poetry]
name = "voice-recognition-app"
version = "0.1.0"
description = "Voice recognition application with web interface"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.1"
flask-socketio = "^5.1.1"
flask-cors = "^3.0.10"
SpeechRecognition = "^3.10.0"
whisper = "^1.1.10"
numpy = "^1.24.3"
PyAudio = "^0.2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"